# projekt-ifj-interpret-2022

./: CMakeLists.txt  Makefile  README.md  code_gen.c  code_gen.h  errors.h  expression.c  expression.h  expstack.c  expstack.h  lexical.c  lexical.h  main.c  parser.c  parser.h  rozdeleni  semantic.c  semantic.h  stack.c  stack.h  str.c  str.h  symtable.c  symtable.h  testIn
IFJ22_Tester-master/: testoutput.txt
tests/: test0  testIn
